	* Fixed bug #14389: phtml is also PHP extension and should be denied editing / uploading via fileadmin (thanks to Ernesto Baschny)
	* Fixed bug #1985: XSS vulnerability in wizard classes
	* Fixed bug #14712: The GET/POST variable mimeType is used to create the http header content-type without verification (thanks to Rupert Germann)

2010-07-21  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #15179: Tree depth retrieval inconsistently limited to 20 levels int3lib_pageSelect

2010-06-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8893: eval "timesec" sets seconds to zero (Thanks to Ralf Hettinger and Andy Grunwald)

2010-06-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14464: htmlArea RTE: Type of block accumulation if the block is manually selected in Safari
	* Updated htmlArea RTE version to 1.7.16

2010-06-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #5117: typolink: cHash corrupted due to linkVars (together with Pierre Dudoret (Popy))

2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13934: Side-effect of substr in t3lib_cs (thanks to Rens Admiraal)

2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #14388: TypoScript templates containing a "$1" become corrupted

2010-05-22  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12923: Javascript error in tmenu_layers.php & gmenu_layers.php (Thanks to Klaus Goessl)

2010-05-22  Xavier Perseguers  <typo3@perseguers.ch>

 	* Fixed bug #14175: belog not shown / error when actions: error is selected (thanks to Philipp Thiele)

2010-05-14  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #14337: "The install tool is locked" doesn't send no-cache headers (thanks to Steffen Gebert)

2010-05-07  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #5003: prefixRelPath() incorrectly changes links to anchors (Thanks to Jigal van Hemert)

2010-05-07  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13495: Workspace tiled Preview shows same version of Page
